--- a/CrashAnalyseTool/zh-Hans.lproj/MainWindowViewController.xib
+++ b/CrashAnalyseTool/zh-Hans.lproj/MainWindowViewController.xib
@@ -14,7 +14,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <window title="crash日志解析" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="WE3-fn-2aP">
+        <window title="Crash日志解析" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="WE3-fn-2aP">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="335" y="390" width="491" height="390"/>
@@ -103,7 +103,7 @@
                     <constraint firstItem="4RN-xj-fFe" firstAttribute="top" secondItem="M7k-VM-nSm" secondAttribute="bottom" constant="8" id="xUt-RF-0Iz"/>
                 </constraints>
             </view>
-            <point key="canvasLocation" x="44" y="341"/>
+            <point key="canvasLocation" x="126" y="162"/>
         </window>
     </objects>
 </document>
